--- a/index.html
+++ b/index.html
@@ -1,1 +1,43 @@
-
+<html>
+  <head>
+    <title> cheese game </title>
+    <style>
+        a {
+            color: inherit;
+        }
+        </style>
+  </head>
+  <body>
+    <header id="start" style="background-color: blue; color: white;"><!-- Это шапка сайта -->
+      <b>Cheese </b><a href="#"></a> | <a href="#"></a> 
+    </header>
+    <main>
+      <h1>cheese game</h1>
+      <img src="https://xgame.store/image/cache/catalog/image/catalog/3/4/9/3496/litsenzionnyy-disk-fury-unleashed-bang-edition-ps4.webp" height="500px">
+      <h2>В этом сайте информация магазина игр</h2>
+      <p>Shoping game!</p>
+      <table style="border-collapse: collapse; border: 1px solid green;">
+        <tr> <!-- Это первая строка! -->
+          <td style="border: 5px solid red;">всем привет с вами влад а 4</td>
+          <td style="border: 5px solid blue;">всем привет с вами влад а 4</td>
+          <td style="border: 5px solid red;">всем привет с вами влад а 4</td>
+        </tr>
+        <tr> <!-- Это первая строка! -->
+          <td style="border: 5px solid blue;">всем привет с вами влад а 4</td>
+          <td style="border: 5px solid red;">всем привет с вами влад а 4</td>
+          <td style="border: 5px solid blue;">всем привет с вами влад а 4</td>
+        </tr>
+        <tr> <!-- Это первая строка! -->
+          <td style="border: 5px solid red;">всем привет с вами влад а 4</td>
+          <td style="border: 5px solid blue;">всем привет с вами влад а 4</td>
+          <td style="border: 5px solid red;">всем привет с вами влад а 4</td>
+        </tr>
+      </table>
+     </main>
+     <footer style="background-color: red; color: white">
+       <p>Вы понили что ничего не понили!</p>
+       <a href="#start">Наверх страницы там ад</a>
+    </footer>
+  </body>
+  
+</html>
